feat: update employee flows and ui with multipart upload support
